# 2dfan-checkin

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  api.py  browser_checkin.py  flaresolverr_checkin.py  main.py  notify.py  pyproject.toml  recaptcha.py  requirements.txt
.github/workflows/: checkin.yml
assets/: 2dfmax.top.md
docs/: CRON_SETUP.md  EMAIL_NOTIFY.md  FLARESOLVERR_SETUP.md
